# fastapi-tutorial

./: .gitignore  LICENSE  README.md
articles/fastapi-version-in-openapi/: README.md  pyproject.toml
articles/fastapi-version-in-openapi/src/: main.py  settings.py
articles/hierarchical-tags-workaround/: README.md
articles/hierarchical-tags-workaround/src/: main.py  tags.py
articles/openapi-tag-metadata/: README.md  pyproject.toml
articles/openapi-tag-metadata/src/: main.py  tags.py
